--- a/SinWaiMai/SinWaiMai/Info.plist
+++ b/SinWaiMai/SinWaiMai/Info.plist
@@ -2,12 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>允许在前台使用时获取GPS的描述</string>
-	<key>CFBundleDisplayName</key>
-	<string>BaiduMap</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>SinWaiMai</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict/>
@@ -58,6 +56,8 @@
 	</dict>
 	<key>NSContactsUsageDescription</key>
 	<string>验证短信</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>允许在前台使用时获取GPS的描述</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
